Make JPIP reader reconnection interruptible with a virtual thread